# ce-zlsma-xauusd

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_PUBLISH.md  MANIFEST.in  README.md  SECURITY.md  TEST_REPORT.md  USAGE.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  strategy_research.yml
.github/workflows/: ci.yml
data/: README.md
docs/: ARCHITECTURE.md
pine/: TradingView_CE_ZLSMA_XAUUSD_Strategy.pine
reports/baseline/: README.md  backtest_stdout.txt  trades_baseline.csv
scripts/: run_baseline.ps1  run_baseline.sh
src/ce_zlsma_xauusd/: __init__.py  cli.py  config.py  engine.py  runner.py
tests/: test_engine.py
