[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ce-zlsma-xauusd"
version = "0.1.0"
description = "Backtrader and TradingView implementation of a CE + ZLSMA XAUUSD strategy."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Open Source Contributors" }]
keywords = ["xauusd", "backtrader", "tradingview", "quant", "zlsma", "chandelier-exit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "backtrader>=1.9.78.123",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "yfinance>=0.2.40",
]

[project.scripts]
ce-zlsma-xauusd = "ce_zlsma_xauusd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ce_zlsma_xauusd = ["py.typed"]
